<resources>
    <string name="app_name">DocApplication</string>
    <string name="tb_home">홈</string>
    <string name="bottom_nav_home">홈</string>
    <string name="bottom_nav_expert">전문가</string>
    <string name="bottom_nav_chat">상담방</string>
    <string name="bottom_nav_video">비대면진료</string>
    <string name="bottom_nav_profile">프로필</string>

    <string name="tv_home">홈 화면 입니다.</string>
    <string name="tv_expert">전문가 화면 입니다.</string>
    <string name="tv_chat">상담방 화면 입니다.</string>
    <string name="tv_video">비대면진료 화면 입니다.</string>
    <string name="tv_profile">프로필 화면 입니다.</string>
</resources>