<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_m_home_off"
        android:enabled="true"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/expertFragment"
        android:icon="@drawable/ic_m_care_off"
        android:enabled="true"
        android:title="@string/bottom_nav_expert" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_m_chat_off"
        android:enabled="true"
        android:title="@string/bottom_nav_chat" />
    <item
        android:id="@+id/videoFragment"
        android:icon="@drawable/ic_m_video_call_off"
        android:enabled="true"
        android:title="@string/bottom_nav_video" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_m_me_off"
        android:enabled="true"
        android:title="@string/bottom_nav_profile" />
</menu>